libtorrent_torrent_data_includedir = $(includedir)/torrent/data
libtorrent_torrent_data_include_HEADERS = \
	torrent/data/block.h \
	torrent/data/block_list.h \
	torrent/data/block_transfer.h \
	torrent/data/chunk_utils.h \
	torrent/data/download_data.h \
	torrent/data/file.h \
	torrent/data/file_list.h \
	torrent/data/file_list_iterator.h \
	torrent/data/file_manager.h \
	torrent/data/file_utils.h \
	torrent/data/piece.h \
	torrent/data/transfer_list.h

libtorrent_torrent_download_includedir = $(includedir)/torrent/download
libtorrent_torrent_download_include_HEADERS = \
	torrent/download/choke_group.h \
	torrent/download/choke_queue.h \
	torrent/download/download_manager.h \
	torrent/download/group_entry.h \
	torrent/download/resource_manager.h

libtorrent_torrent_net_includedir = $(includedir)/torrent/net
libtorrent_torrent_net_include_HEADERS = \
	torrent/net/address_info.h \
	torrent/net/fd.h \
	torrent/net/socket_address.h \
	torrent/net/socket_address_key.h \
	torrent/net/socket_event.h \
	torrent/net/types.h

libtorrent_torrent_peer_includedir = $(includedir)/torrent/peer
libtorrent_torrent_peer_include_HEADERS = \
	torrent/peer/choke_status.h \
	torrent/peer/client_info.h \
	torrent/peer/client_list.h \
	torrent/peer/connection_list.h \
	torrent/peer/peer.h \
	torrent/peer/peer_info.h \
	torrent/peer/peer_list.h

libtorrent_torrent_utils_includedir = $(includedir)/torrent/utils
libtorrent_torrent_utils_include_HEADERS = \
	torrent/utils/directory_events.h \
	torrent/utils/extents.h \
	torrent/utils/log.h \
	torrent/utils/log_buffer.h \
	torrent/utils/option_strings.h \
	torrent/utils/ranges.h \
	torrent/utils/resume.h \
	torrent/utils/signal_bitfield.h \
	torrent/utils/thread_base.h \
	torrent/utils/thread_interrupt.h \
	torrent/utils/uri_parser.h

libtorrent_torrent_includedir = $(includedir)/torrent
libtorrent_torrent_include_HEADERS = \
	torrent/bitfield.h \
	torrent/chunk_manager.h \
	torrent/common.h \
	torrent/connection_manager.h \
	torrent/dht_manager.h \
	torrent/download.h \
	torrent/download_info.h \
	torrent/error.h \
	torrent/exceptions.h \
	torrent/event.h \
	torrent/hash_string.h \
	torrent/http.h \
	torrent/object.h \
	torrent/object_raw_bencode.h \
	torrent/object_static_map.h \
	torrent/object_stream.h \
	torrent/path.h \
	torrent/poll.h \
	torrent/poll_epoll.h \
	torrent/poll_kqueue.h \
	torrent/poll_select.h \
	torrent/rate.h \
	torrent/throttle.h \
	torrent/torrent.h \
	torrent/tracker.h \
	torrent/tracker_controller.h \
	torrent/tracker_list.h
